# RAG-Tool-using-AI-Agent-from-scratch

./: agent.py  ask.py  faiss_test.py  ingest.py  main.py  pyproject.toml  readme.md  retrieve.py  tools.py
store/: chunks.pkl  index.faiss
